K8s-Configs/hostaliases-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-ingress-controller-586cdc477c-q5hj4
  namespace: kube-system
spec:
  restartPolicy: Never
  hostAliases:
  - ip: "192.168.99.104"
    hostnames:
    - "smk8s.com"
  containers:
  - name: cat-hosts
    image: busybox
    command:
    - cat
    args:
    - "/etc/hosts"
