K8s-Configs/customer-service-cloud-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: customer-service-deploy
  labels: 
    app: customer-service-kubernetes
spec: 
  replicas: 2
  selector: 
    matchLabels: 
      app: customer-service-kubernetes
  template: 
    metadata:
      labels: 
        app: customer-service-kubernetes
    spec: 
      containers:
      - name: customer-service
        image: gcr.io/customer-service-kubernetes/customer-service:v1
        volumeMounts:
          # name must match the volume name below
          - name: customer-secret-volume
            mountPath: /etc/customer-secret-volume
        imagePullPolicy: Always
        ports: 
        - containerPort: 8081
      volumes:
        - name: customer-secret-volume
          secret:
            secretName: db-secret   
            items:
            - key: customer-database-user
              path: customerUser
            - key: customer-database-password
              path: customerPass 
              
              
---
apiVersion: v1
kind: Service
metadata:
  name: customer-service
spec:
  selector:
    app: customer-service-kubernetes
  ports:
  - protocol: TCP
    port: 8081
    nodePort: 30001
  type: LoadBalancer
