K8s-Configs/order-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: order-service
  labels: 
    app: order-service
spec: 
  replicas: 2
  selector: 
    matchLabels: 
      app: order-service
  template: 
    metadata:
      labels: 
        app: order-service
    spec: 
      containers:
      - name: order-service
        image: retail/order-service:v1
        volumeMounts:
          # name must match the volume name below
          - name: order-secret-volume
            mountPath: /etc/order-secret-volume
        imagePullPolicy: Never
        ports: 
        - containerPort: 8080
          protocol: TCP
      volumes:
        - name: order-secret-volume
          secret:
            secretName: db-secret   
            items:
            - key: order-database-user
              path: orderUser
            - key: order-database-password
              path: orderPass 
              
              
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  selector:
    app: order-service
  ports:
  - protocol: TCP
    port: 8080
#   targetPort: 8080
    nodePort: 30003
  type: LoadBalancer
