K8s-Configs/product-service-cloud-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: product-service-deploy
  labels: 
    app: product-service-kubernetes
spec: 
  replicas: 3
  selector: 
    matchLabels: 
      app: product-service-kubernetes
  template: 
    metadata:
      labels: 
        app: product-service-kubernetes
    spec: 
      containers:
      - name: product-service
        image: gcr.io/product-service-kubernetes/product-service:v1
        volumeMounts:
          # name must match the volume name below
          - name: secret-volume
            mountPath: /etc/secret-volume
        imagePullPolicy: Always
        ports: 
        - containerPort: 8083
      volumes:
        - name: secret-volume
          secret:
            secretName: db-secret   
            items:
            - key: database-user
              path: user
            - key: database-password
              path: pass 
              
              
---
apiVersion: v1
kind: Service
metadata:
  name: product-service
spec:
  selector:
    app: product-service-kubernetes
  ports:
  - protocol: TCP
    port: 8083
    nodePort: 30003
  type: LoadBalancer

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: product-service-ingress
spec:
  rules:
  - host: info.product.com
    http:
      paths:
      - path: /product
        backend:
          serviceName: product-service
          servicePort: 8083
